RESOLVED FIXED77675
Getters and setters cause line numbers in errors/console.log to be offset for the whole file
https://bugs.webkit.org/show_bug.cgi?id=77675
Summary Getters and setters cause line numbers in errors/console.log to be offset for...
Oliver Hunt
Reported 2012-02-02 13:02:11 PST
Getters and setters cause line numbers in errors/console.log to be offset for the whole file
Attachments
Patch (5.55 KB, patch)
2012-02-02 13:05 PST, Oliver Hunt
timothy: review+
Oliver Hunt
Comment 1 2012-02-02 13:05:25 PST
Oliver Hunt
Comment 2 2012-02-02 13:20:13 PST
Gavin Barraclough
Comment 3 2012-03-11 12:33:16 PDT
*** Bug 59926 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.